--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Krishna Dhakal, PhD EIT</title>
+    <title>Krishna Dhakal, PhD, EIT</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -296,7 +296,7 @@
             margin-bottom: 15px
         }
 
-        .content .publications .item .title {
+        .content .publications .item .title, .content .dissertation .item .title {
             font-size: 16px;
             font-weight: 700;
             color: #3F4650;
@@ -304,18 +304,18 @@
             text-align: left;
         }
 
-        .content .publications .authors {
-            font-style: italic;
+        .content .publications .authors, .content .dissertation .authors  {
             color: #3A869D;
             margin-bottom: 1px
         }
 
-        .content .publications .intro {
+        .content .publications .intro, .content .dissertation .intro {
             margin-bottom: 30px
         }
 
-        .content .publications .item {
-            margin-bottom: 15px
+        .content .publications .item, .content .dissertation .item {
+            margin-bottom: 15px;
+            line-height: 1.3;
         }
 
         .skillset .item {
@@ -428,19 +428,19 @@
             <div class="education panel">
                 <h2 class="title"><i class="fa fa-graduation-cap"></i>Education</h2>
                 <div class="item">
-                    <h4 class="degree">PhD in Environmental Resources and Policy</h4>
+                    <h4 class="degree">PhD in Environmental Resources and Policy (Water Resources)</h4>
                     <h5 class="name">Southern Illinois University</h5>
-                    <div class="time">2011 - 2012</div>
+                    <div class="time">2017</div>
                 </div>
                 <div class="item">
                     <h4 class="degree">MS in Civil Engineering</h4>
                     <h5 class="name">Western Michigan University</h5>
-                    <div class="time">2007 - 2011</div>
+                    <div class="time">2010</div>
                 </div>
                 <div class="item">
                     <h4 class="degree">BS in Civil Engineering</h4>
                     <h5 class="name">Tribhuvan University, Institute of Engineering</h5>
-                    <div class="time">1993 - 1997</div>
+                    <div class="time">1997</div>
                 </div>
             </div>
             <div class="languages panel">
@@ -471,27 +471,45 @@
                 <div class="item"> <span class="experience-title"><a href="#">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps.</span></div>
                 <div class="item"> <span class="experience-title"><a href="#">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span></div>
             </div>-->
+            <div class="panel dissertation">
+                <h2 class="title">dissertation and thesis</h2>
+                <div class="item">
+                    <div class="title">Climate change impact on urban stormwater system and use of green infrastructure for adaptation: An investigation on technology, policy, and governance</div>
+                    <div class="authors">KP Dhakal (2017)</div>
+                    <div class="conference">PhD Dissertation, Southern Illinois University Carbondale <br> http://opensiuc.lib.siu.edu/cgi/viewcontent.cgi?article=2483&amp;context=dissertations</div>
+                </div>
+                <div class="item">
+                    <div class="title">Integration of Sustainability Measures into Highways</div>
+                    <div class="authors">KP Dhakal (2010)</div>
+                    <div class="conference">MS Thesis, Western Michigan University</div>
+                </div>
+            </div>
             <div class="panel publications">
                 <h2 class="title">publications</h2>
                 <div class="item">
+                    <div class="title">Managing urban stormwater for urban sustainability: Barriers and policy solutions for green infrastructure application</div>
+                    <div class="authors">KP Dhakal, LR Chevalier (2017)</div>
+                    <div class="conference">Journal of Environmental management, https://doi.org/10.1016/j.jenvman.2017...</div>
+                </div>
+                <div class="item">
                     <div class="title">Urban stormwater governance: the need for a paradigm shift</div>
-                    <div class="authors">KP Dhakal, LR Chevalier</div>
+                    <div class="authors">KP Dhakal, LR Chevalier (2016)</div>
                     <div class="conference">Environmental management 57 (5), 1112-1124</div>
                 </div>
                 <div class="item">
-                    <div class="title">Integrating sustainability into highway projects: Sustainability indicators and assessment tool for Michigan roads</div>
-                    <div class="authors">KP Dhakal, JS Oh</div>
-                    <div class="conference">Transportation and Development Institute Congress 2011: Integrated...</div>
-                </div>
-                <div class="item">
                     <div class="title">Implementing Low Impact Development in Urban Landscapes: A Policy Perspective</div>
-                    <div class="authors">KP Dhakal, LR Chevalier</div>
+                    <div class="authors">KP Dhakal, LR Chevalier (2015)</div>
                     <div class="conference">World Environmental and Water Resources Congress 2015, 322-333</div>
                 </div>
                 <div class="item">
-                    <div class="title">Managing urban stormwater for urban sustainability: Barriers and policy solutions for green infrastructure application</div>
-                    <div class="authors">KP Dhakal, LR Chevalier</div>
-                    <div class="conference">Journal of Environmental management, https://doi.org/10.1016/j.jenvman.2017...</div>
+                    <div class="title">An Evaluation of Wettability in 2-D Visualization Experiments</div>
+                    <div class="authors">R. Sainte Aimé, LR Chevalier, and KP Dhakal (2012)</div>
+                    <div class="conference">22nd Annual International Conference on Soil, Water, Energy, and Air 2012.</div>
+                </div>
+                <div class="item">
+                    <div class="title">Integrating sustainability into highway projects: Sustainability indicators and assessment tool for Michigan roads</div>
+                    <div class="authors">KP Dhakal, JS Oh (2011)</div>
+                    <div class="conference">Transportation and Development Institute Congress 2011: Integrated Transportation and Development for a Better Tomorrow</div>
                 </div>
                 <div style="text-align: center;">
                     <a target="_blank" href="https://scholar.google.com/citations?user=b5KTL1UAAAAJ">See more on Google Scholar<i style="margin-left:.3em" class="fa fa-external-link-alt"></i></a>
