--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="sidebar">
             <div class="profile"> <img class="profile-img" src="profile-pic.jpg" alt="profile picture" />
                 <h1 class="name">Krishna P. Dhakal</h1>
-                <h3 class="subtitle">PhD EIT</h3>
+                <h3 class="subtitle">PhD, EIT</h3>
             </div>
             <div class="contact panel">
                 <ul class="list-unstyled contact-list">
