--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <div class="panel summary">
                 <h2 class="title">who I am</h2>
                 <div class="summary">
-                    <p>Sustainability professional with an advanced interdisciplinary degree in environmental resources and policy.  Recent publications relevant on sustainability.  Over ten years of industry/government experience urban planning, sustainable neighborhood, and urban infrastructure design and implementation across multicultural environments.  Seeking for a position that provides an opportunity to contribute to sustainability through teaching, research, publication, and advocacy.</p>
+                    <p>Civil/Water Resources/Environmental Engineer and a Sustainability professional with an advanced interdisciplinary degree in Environmental Resources and Policy.  Recent publications relevant on sustainability.  Over ten years of experience with industry, local government, and central government experience in urban planning, sustainability, and urban infrastruture design and construction across multicultural settings.  Highly motivated to contribute to achieving sustainability through research, publication, teaching, advocacy, and implementation.</p>
                 </div>
             </div>
             <!--
