--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <div class="panel summary">
                 <h2 class="title">who I am</h2>
                 <div class="summary">
-                    <p>Civil/water resources/environmental engineer and a sustainability professional with an advanced interdisciplinary degree in Environmental Resources and Policy.  Recent publications on sustainability.  Over ten years of experience with industry, local government, and central government in urban planning, sustainability, and urban infrastruture design and construction across multicultural settings. A unique combination of engineering expertise, management skills, and polcy knowledge. Highly motivated to contribute to achieving sustainability through research, implementation, publication, teaching, and advocacy.</p>
+                    <p>Civil/water resources/environmental engineer and a sustainability professional with an advanced interdisciplinary degree in Environmental Resources and Policy.  Recent publications on sustainability.  Over ten years of experience with industry, local government, and central government in urban planning, sustainability, and urban infrastruture design and construction across multicultural settings. A unique combination of engineering expertise, management skills, and policy knowledge. Highly motivated to contribute to achieving sustainability through research, implementation, publication, teaching, and advocacy.</p>
                 </div>
             </div>
             <!--
