--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
             <div class="contact panel">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:krishna.gogreen@gmail.com"><span class="__cf_email__">krishna.gogreen@gmail.com</span></a></li>
-                    <li class="phone"><i class="fa fa-flip-horizontal fa-phone"></i><a href="tel:(618) 303-7987">(618) 303-7987</a></li>
-                    <!--<li class="linkedin"><i class="fab fa-linkedin"></i><a href="https://linkedin.com/in/krishna-dhakal" target="_blank">krishna-dhakal</a></li>
-                    <li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/@kpdhakal" target="_blank">@kpdhakal</a></li>-->
+                    <!--<li class="phone"><i class="fa fa-flip-horizontal fa-phone"></i><a href="tel:---">---</a></li>-->
+                    <li class="linkedin"><i class="fab fa-linkedin"></i><a href="https://linkedin.com/in/drkpdhakal" target="_blank">drkpdhakal</a></li>
+                    <!--<li class="twitter"><i class="fab fa-twitter"></i><a href="https://twitter.com/@----" target="_blank">@---</a></li>-->
                 </ul>
             </div>
             <div class="education panel">
@@ -430,17 +430,14 @@
                 <div class="item">
                     <h4 class="degree">PhD in Environmental Resources and Policy (Water Resources)</h4>
                     <h5 class="name">Southern Illinois University</h5>
-                    <div class="time">2017</div>
                 </div>
                 <div class="item">
                     <h4 class="degree">MS in Civil Engineering</h4>
                     <h5 class="name">Western Michigan University</h5>
-                    <div class="time">2010</div>
                 </div>
                 <div class="item">
                     <h4 class="degree">BS in Civil Engineering</h4>
                     <h5 class="name">Tribhuvan University, Institute of Engineering</h5>
-                    <div class="time">1997</div>
                 </div>
             </div>
             <div class="languages panel">
